後台權限 - 尚未完善

--- a/composer.json
+++ b/composer.json
@@ -6,10 +6,11 @@
     "type": "project",
     "require": {
         "php": ">=5.6.4",
+        "intervention/image": "dev-master",
         "laravel/framework": "5.4.*",
         "laravel/tinker": "~1.0",
-        "unisharp/laravel-filemanager": "^1.8",
-        "intervention/image": "dev-master"
+        "spatie/laravel-permission": "^2.2",
+        "unisharp/laravel-filemanager": "^1.8"
     },
     "require-dev": {
         "fzaninotto/faker": "~1.4",
